dfir_rs/tests/compile-fail-stable/surface_singleton_badexpr.rs
../compile-fail/surface_singleton_badexpr.rs